reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__events__apply.rs_line_203_col_5.log

*** crates/tracewake-core/src/events/apply.rs:203:5: replace apply_epistemic_event -> Result<ApplyOutcome, EpistemicApplyError> with Ok(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/events/apply.rs
+++ replace apply_epistemic_event -> Result<ApplyOutcome, EpistemicApplyError> with Ok(Default::default())
@@ -195,106 +195,17 @@
         other => Err(ApplyError::UnhandledWorldEventKind(other)),
     }
 }
 
 pub fn apply_epistemic_event(
     projection: &mut EpistemicProjection,
     event: &EventEnvelope,
 ) -> Result<ApplyOutcome, EpistemicApplyError> {
-    if !event.has_supported_schema_version() {
-        return Err(EpistemicApplyError::UnsupportedEventSchemaVersion(
-            event.event_schema_version.as_str().to_string(),
-        ));
-    }
-
-    if event.stream != event.event_type.stream() {
-        return Err(EpistemicApplyError::EventKindStreamMismatch);
-    }
-
-    if event.stream != EventStream::Epistemic {
-        return Ok(ApplyOutcome::NonWorldNoOp);
-    }
-
-    if event.event_type.requires_cause() && event.causes.is_empty() {
-        return Err(EpistemicApplyError::MissingCause);
-    }
-
-    let payload = payload_map(&event.payload);
-    let payload_schema_version = required_epistemic(&payload, "schema_version")?;
-    if payload_schema_version != EVENT_SCHEMA_V1 {
-        return Err(EpistemicApplyError::UnsupportedPayloadSchemaVersion(
-            payload_schema_version.to_string(),
-        ));
-    }
-
-    match event.event_type {
-        EventKind::InitialBeliefSeeded | EventKind::BeliefUpdated => {
-            let belief = parse_belief_payload(&payload)?;
-            projection.insert_belief(belief);
-            Ok(ApplyOutcome::Applied)
-        }
-        EventKind::ObservationRecorded => {
-            let observation =
-                parse_observation_payload(&payload)?.with_raw_payload(event.payload.clone());
-            projection.insert_observation(observation);
-            Ok(ApplyOutcome::Applied)
-        }
-        EventKind::RoleAssignmentNoticeRecorded => {
-            let actor_id = parse_actor_id_epistemic(&payload, "actor_id")?;
-            let workplace_id = required_epistemic(&payload, "workplace_id").and_then(|value| {
-                crate::ids::WorkplaceId::new(value).map_err(|_| EpistemicApplyError::BadPayload {
-                    key: "workplace_id",
-                    value: value.to_string(),
-                })
-            })?;
-            let place_id = parse_place_id_epistemic(&payload, "place_id")?;
-            let access_open = match required_epistemic(&payload, "access_open")? {
-                "true" => true,
-                "false" => false,
-                value => {
-                    return Err(EpistemicApplyError::BadPayload {
-                        key: "access_open",
-                        value: value.to_string(),
-                    })
-                }
-            };
-            projection.insert_role_assignment_notice(
-                actor_id,
-                workplace_id,
-                place_id,
-                access_open,
-                event.event_id.clone(),
-                event.sim_tick,
-            );
-            Ok(ApplyOutcome::Applied)
-        }
-        EventKind::StartingBeliefRecorded => {
-            let actor_id = parse_actor_id_epistemic(&payload, "actor_id")?;
-            let belief_kind = required_epistemic(&payload, "belief_kind")?;
-            let subject_id = required_epistemic(&payload, "subject_id")?;
-            let value = required_epistemic(&payload, "value")?;
-            projection.insert_starting_belief(
-                actor_id,
-                belief_kind,
-                subject_id,
-                value,
-                event.event_id.clone(),
-                event.sim_tick,
-            );
-            Ok(ApplyOutcome::Applied)
-        }
-        EventKind::ExpectationContradicted => {
-            let contradiction = parse_contradiction_payload(&payload)?;
-            projection.insert_contradiction(contradiction);
-            Ok(ApplyOutcome::Applied)
-        }
-        EventKind::ContainerChecked => Ok(ApplyOutcome::WorldNoOp),
-        _ => Err(EpistemicApplyError::NonEpistemicEvent),
-    }
+    Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn apply_agent_event(
     state: &mut AgentState,
     event: &EventEnvelope,
 ) -> Result<ApplyOutcome, ApplyError> {
     let capability = AgentMutationCapability::mint();
     apply_agent_event_with_capability(state, event, capability)


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/events/apply.rs` has changed (1781909977.387925924s, 3s after last build at 1781909974.327925944s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `EVENT_SCHEMA_V1`
  --> crates/tracewake-core/src/events/apply.rs:13:5
   |
13 |     EVENT_SCHEMA_V1,
   |     ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ApplyOutcome: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:203:8
    |
203 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ApplyOutcome`
   --> crates/tracewake-core/src/events/apply.rs:24:1
    |
 24 | pub enum ApplyOutcome {
    | ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `apply::ApplyOutcome: Default` is not satisfied
   --> crates/tracewake-core/src/events/apply.rs:203:8
    |
203 |     Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `apply::ApplyOutcome`
   --> crates/tracewake-core/src/events/apply.rs:24:1
    |
 24 | pub enum ApplyOutcome {
    | ^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
